update about page layout, c2g link, contact info

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -1,3 +1,4 @@
+{% comment %}
 <header>
   <!-- Nav Bar -->
   <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}" role="navigation">
@@ -127,3 +128,4 @@
     </progress>
   {% endif %}
 </header>
+{% endcomment %}
